Downgrade symfony to v4 Create account manipulator
