# src/TripBundle/Model/Account.php
@@ -1,51 +1,32 @@
 <?php
-/**
- * Account
- *
- * PHP version 7.1.3
- *
- * @category Class
- * @package  TripBundle\Model
- * @author   OpenAPI Generator team
- * @link     https://github.com/openapitools/openapi-generator
- */
-
-/**
- * Trips
- *
- * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
- *
- * The version of the OpenAPI document: 1.0.0
- * 
- * Generated by: https://github.com/openapitools/openapi-generator.git
- *
- */
-
-/**
- * NOTE: This class is auto generated by the openapi generator program.
- * https://github.com/openapitools/openapi-generator
- * Do not edit the class manually.
- */
 
 namespace TripBundle\Model;
 
+use JMS\Serializer\Annotation as Serializer;
 use Symfony\Component\Validator\Constraints as Assert;
 use JMS\Serializer\Annotation\Type;
 use JMS\Serializer\Annotation\SerializedName;
+use Doctrine\ORM\Mapping as ORM;
 
 /**
- * Class representing the Account model.
+ * Account
  *
- * @package TripBundle\Model
- * @author  OpenAPI Generator team
+ * @ORM\Table(name="account", uniqueConstraints={@ORM\UniqueConstraint(name="email", columns={"email"})})
+ * @ORM\Entity
  */
 class Account 
 {
-        /**
+    /**
      * @var int|null
      * @SerializedName("id")
      * @Assert\Type("int")
+     * @Assert\GreaterThan(1)
      * @Type("int")
+     * @Serializer\Groups({"all"})
+     *
+     * @ORM\Column(name="id", type="integer", nullable=false)
+     * @ORM\Id
+     * @ORM\GeneratedValue(strategy="AUTO")
      */
     protected $id;
 
@@ -55,6 +36,9 @@ class Account
      * @Assert\NotNull()
      * @Assert\Type("string")
      * @Type("string")
+     * @Serializer\Groups({"all", "register"})
+     *
+     * @ORM\Column(name="email", type="string", length=255, nullable=false, unique=true)
      */
     protected $email;
 
@@ -63,6 +47,9 @@ class Account
      * @SerializedName("password")
      * @Assert\Type("string")
      * @Type("string")
+     * @Serializer\Groups({"register"})
+     *
+     * @ORM\Column(name="password", type="string", length=128, nullable=false)
      */
     protected $password;
 
